@@ -5,8 +5,12 @@
 * Added compatibility plugin header fields.
 * Added various missing code documentation.
 * Fixed various code documentation formatting issues.
+* Fixed several instances of missing documentation of return types.
 * Removed bits of unused commented code.
 * Revised update methods that do nothing.
+* Adds support for the Navigation blocks, so that protected items are hidden from users who should not see them.
+* Added filter to block_core_navigation_render_inner_blocks.
+* Added filter to render_block and pre_render_block.
 
 = 2.19.0 =
 * WordPress 6.4 compatible.
